--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,14 @@
 cmake_minimum_required(VERSION 3.0)
 project(libstra VERSION 0.0.1)
 
-set(CMAKE_CXX_STANDARD 14)
+option(USE_CPP_17 "Enable support for C++ 17" ON)
+
+if(${USE_CPP_17})
+    set(CMAKE_CXX_STANDARD 17)
+else()
+    set(CMAKE_CXX_STANDARD 14)
+endif(${USE_CPP_17})
+
 
 add_library(libstra INTERFACE)
 target_include_directories(libstra INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}/include)
@@ -22,6 +29,7 @@ target_compile_features(storage_test PRIVATE cxx_std_17)
 target_link_libraries(storage_test PRIVATE libstra)
 
 add_executable(expected_test tests/expected.cpp)
+target_compile_features(expected_test PRIVATE cxx_std_17)
 target_link_libraries(expected_test PRIVATE libstra)
 
 add_test(NAME UniqueFuntion COMMAND unique_function_test)
