added extra warnings

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,12 @@ project(libstra VERSION 0.1.0)
 set(CMAKE_CXX_STANDARD 14)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
+if(${MSVC})
+    add_compile_options(/Wall)
+    else()    
+    add_compile_options(-Wall)
+endif(${MSVC})
+
 
 add_library(libstra INTERFACE)
 target_include_directories(libstra INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}/include)
