--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -61,6 +61,9 @@ target_link_libraries(memory_tests PRIVATE libstra)
 add_executable(views_tests tests/views.cpp)
 target_link_libraries(views_tests PRIVATE libstra)
 
+add_executable(static_vector_tests tests/static_vector.cpp)
+target_link_libraries(static_vector_tests PRIVATE libstra)
+
 add_test(NAME UniqueFuntion COMMAND unique_function_test)
 add_test(NAME Storage COMMAND storage_test)
 add_test(NAME Utility COMMAND utils_tests)
@@ -70,6 +73,7 @@ add_test(NAME Semaphore COMMAND sem_tests)
 add_test(NAME Barrier COMMAND barrier_tests)
 add_test(NAME Memory COMMAND memory_tests)
 add_test(NAME Views COMMAND views_tests)
+add_test(NAME StaticVector COMMAND static_vector_tests)
 
     
 endif(${BUILD_TESTING})
